2016-02-21  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (event_grid_zoom): Make zoom up always work.

2016-02-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Enable LCD filtering.

	* src/ftgrid.c (event_lcd_filter_change): New function.
	(status, main, Process_Event, event_help): Updated.

2016-02-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Improve stroked path appearance.

	* src/ftgrid.c (grid_status_draw_outline): Hint scaled outline to
	follow gridlines and cover entire pixels.

2016-02-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Display monochrome and LCD bitmaps.

	* src/ftgrid.c (grid_status_draw_outline): Rework to use...
	(bitmap_scale): New function that implements bitmap scaling.

2016-02-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Actually clear cache when full.

	* graph/gblender.c (gblender_lookup, gblender_lookup_channel):
	Updated.

2016-02-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Display rendered bitmap (new feature).

	* src/ftgrid.c (status): New field to control new feature.
	(grid_status_draw_outline): Implement new feature here.
	(Process_Event, usage): Updated.

2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_draw_outline): Use simpler line join.

2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Use fixed-point scale and integer origin.

	* src/ftgrid.c (status): Change field types.
	(grid_status_init, grid_status_rescale_initial, grid_status_draw_grid,
	grid_hint_draw_segment, grid_status_draw_outline): Updated.

2016-02-07  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.3 released.
	=========================


	Tag sources with `VER-2-6-3'.

	* README: Updated.
	* src/*.1: Updated.

2016-02-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_String_Draw): Typo.

2016-02-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c, src/ftview.c, src/testname.c: Remove math.h.
