@@ -17,7 +17,7 @@ ftgrid \- simple glyph grid viewer
 .
 .B ftgrid
 displays the glyphs of a font as outlines right before the conversion
-from outlines to pixels take place.
+from outlines to pixels take place. It also displays the resulting bitmap.
 It is possible to interactively change hinting and rendering options,
 thus visualizing the applied distortions to the outlines.
 .
