@@ -1,3 +1,12 @@
+2016-02-21  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[ftgrid] Touch up.
+
+	* src/ftgrid.c (status): Initialize `header' as NULL to display font
+	name initially. Use bits of new field `work' to control...
+	(grid_status_draw_outline, main, Process_Event): Updated accordingly.
+	* src/ftgrid.1: Updated.
+
 2016-02-21  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftgrid.c (event_grid_zoom): Make zoom up always work.
